facet-styx/src/snapshots/facet_styx__schema_error__tests__expected_object_diagnostic.snap
---
source: crates/facet-styx/src/schema_error.rs
expression: rendered
---
Error: expected object at 'config'
   ╭─[ test.styx:1:8 ]
   │
 1 │ config simple_value
   │        ──────┬─────  
   │              ╰─────── expected { ... }
───╯
